operator/src/test/resources/org/projectnessie/operator/tests/fixtures/rocks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nessie-test
  labels:
    app.kubernetes.io/component: nessie
    app.kubernetes.io/instance: nessie-test
    app.kubernetes.io/managed-by: nessie-controller
    app.kubernetes.io/name: nessie
    app.kubernetes.io/part-of: nessie
    # noinspection KubernetesUnknownValues
    app.kubernetes.io/version: "@projectVersion@"
    foo: bar
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: nessie
      app.kubernetes.io/instance: nessie-test
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nessie
        app.kubernetes.io/instance: nessie-test
        foo: bar
      annotations:
        foo: bar
        projectnessie.org/config-checksum: sha256:cabad0c51fce79e2526978acd5ed920a1efe1e36e10f4f6bf33358b1ae44ff39
    spec:
      securityContext:
        fsGroup: 1000
      nodeSelector:
        foo: bar
      tolerations:
        - key: "key"
          operator: "Equal"
          value: "value"
          effect: "NoSchedule"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: "key"
                    operator: "In"
                    values:
                      - "value"
      containers:
        - name: nessie
          image: projectnessie/nessie:1.2.3
          imagePullPolicy: Never
          ports:
            - name: nessie-server
              containerPort: 19120
              protocol: TCP
            - name: nessie-mgmt
              containerPort: 9000
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
          volumeMounts:
            - name: nessie-config
              mountPath: /deployments/config/application.properties
              subPath: application.properties
            - mountPath: /rocks-nessie
              name: rocks-storage
          env:
            - name: JAVA_OPTS_APPEND
              value: "-XX:InitialRAMPercentage=70.0 -XX:MaxRAMPercentage=70.0"
            - name: QUARKUS_PROFILE
              value: "prod"
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/live
              port: nessie-mgmt
              scheme: HTTP
            initialDelaySeconds: 2
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/ready
              port: nessie-mgmt
              scheme: HTTP
            initialDelaySeconds: 3
            periodSeconds: 45
            successThreshold: 1
            timeoutSeconds: 10
      volumes:
        - name: nessie-config
          configMap:
            name: nessie-test
        - name: rocks-storage
          persistentVolumeClaim:
            claimName: nessie-test
      serviceAccountName: nessie-test-custom-service-account
status:
  observedGeneration: 1
  replicas: 1
  updatedReplicas: 1
  readyReplicas: 1
  availableReplicas: 1
  conditions:
    - type: Available
      status: 'True'
      lastUpdateTime: '2024-01-22T14:16:21Z'
      lastTransitionTime: '2024-01-22T14:16:21Z'
      reason: MinimumReplicasAvailable
      message: Deployment has minimum availability.
    - type: Progressing
      status: 'True'
      lastUpdateTime: '2024-01-22T14:16:21Z'
      lastTransitionTime: '2024-01-22T14:16:18Z'
      reason: NewReplicaSetAvailable
      message: ReplicaSet "nessie-test-abcdefg" has successfully progressed.
