operator/src/test/resources/org/projectnessie/operator/tests/fixtures/rocks/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nessie-test
  labels:
    app.kubernetes.io/component: nessie
    app.kubernetes.io/instance: nessie-test
    app.kubernetes.io/managed-by: nessie-controller
    app.kubernetes.io/name: nessie
    app.kubernetes.io/part-of: nessie
    # noinspection KubernetesUnknownValues
    app.kubernetes.io/version: "@projectVersion@"
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: nessie.example.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              serviceName: nessie-test
              servicePort: 19120
  tls:
    - hosts:
        - nessie.example.com
      secretName: nessie-test-tls
status:
  loadBalancer:
    ingress:
      - ip: 192.168.49.2
