operator/src/test/resources/org/projectnessie/operator/tests/fixtures/rocks/service-mgmt.yaml
apiVersion: v1
kind: Service
metadata:
  name: nessie-test
  labels:
    app.kubernetes.io/component: nessie
    app.kubernetes.io/instance: nessie-test
    app.kubernetes.io/managed-by: nessie-controller
    app.kubernetes.io/name: nessie
    app.kubernetes.io/part-of: nessie
    # noinspection KubernetesUnknownValues
    app.kubernetes.io/version: "@projectVersion@"
spec:
  ports:
    - name: nessie-mgmt
      protocol: TCP
      port: 9000
      targetPort: 9000
  selector:
    app.kubernetes.io/name: nessie
    app.kubernetes.io/instance: nessie-test
  clusterIP: None
  publishNotReadyAddresses: true
